# recipebox-v1-K1NGDANO

./: pyproject.toml
recipe_app/: admin.py  forms.py  models.py  views.py
recipe_app/migrations/: 0001_initial.py
recipe_app/templates/: author_detail.html  form.html  index.html  recipes_detail.html
recipebox/: settings.py  urls.py
templates/: author_detail.html  generic_form.html  index.html  recipes_detail.html
