[tool.poetry]
name = "recipebox-v1-k1ngdano"
version = "0.1.0"
description = ""
authors = ["K1NGDANO <big62coin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
